Alignment and Race bugged idk

--- a/src/main/resources/static/css/createCompanion.css
+++ b/src/main/resources/static/css/createCompanion.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Droid Sans", monospace;
     background-color: var(--background-color);
+    color: var(--prime-color);
     margin: 0;
     padding: 0;
     display: flex;
